# object_area_filter

./: CMakeLists.txt  README.md  package.xml
config/: areas.yaml
include/object_area_filter/: object_area_filter.hpp
launch/: object_area_filter.launch
src/: object_area_filter.cpp  object_area_filter_node.cpp
